--- a/choi/.settings/org.eclipse.wst.common.component
+++ b/choi/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="choi">
+    <wb-module deploy-name="Choi">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="choi"/>
-        <property name="java-output-path" value="/choi/build/classes"/>
+        <property name="context-root" value="Choi"/>
+        <property name="java-output-path" value="/Choi/build/classes"/>
     </wb-module>
 </project-modules>
